force-app/main/default/objects/Employee_Application__c/fields/Are_you__c.field-meta.xml
<CustomField>
    <fullName>Are_you__c</fullName>
    <label>Are you authorized to work in US ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>