force-app/main/default/objects/Employee_Application__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Basic Swim Instructor (BSI) certification</fullName>
            </value>
            <value>
                <fullName>Water Safety Instructor (WSI) certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>