force-app/main/default/objects/Employee_Application__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <type>TextArea</type>
</CustomField>