force-app/main/default/objects/Employee_Application__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <type>TextArea</type>
</CustomField>