force-app/main/default/objects/Employee_Application__c/fields/Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience__c</fullName>
    <label>Years Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>