force-app/main/default/objects/Employee_Application__c/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>Default</label>
</ListView>